# Universal-Embedded-Workbench

./: .gitignore  README.md  requirements-dev.txt
.claude/skills/workbench-ble/: SKILL.md
.devcontainer/: devcontainer.json
docs/: Embedded-Workbench-FSD.md  User Manual.md  WiFi-Workbench-HTTP-Manual.md  workbench.rest
pi/: ble_controller.py  install.sh  mqtt_controller.py  portal.py
pytest/: mqtt_test.py  verify_test_progress.py  workbench_driver.py
test-firmware/main/: CMakeLists.txt  app_main.c  mqtt_test.c  mqtt_test.h
